Toggle button fixed and reviews added in student dashboard

--- a/ai-academy/fontend/admin-dashboard.html
+++ b/ai-academy/fontend/admin-dashboard.html
@@ -129,7 +129,7 @@
             </ul>
           </div>
           <div class="nav-items">
-            <div class="theme-toggle"><span class="theme-icon">🌙</span><button class="toggle-switch" type="button" onclick="toggleTheme()"><span class="toggle-slider"></span></button><span class="theme-icon">☀️</span></div>
+            <div class="theme-toggle"><span class="theme-icon">🌙</span><button class="toggle-switch" type="button"><span class="toggle-slider"></span></button><span class="theme-icon">☀️</span></div>
             <div class="nav-actions"><button class="btn btn-secondary" onclick="handleLogout()">Logout</button></div>
           </div>
           <button class="mobile-menu-btn" type="button"><span></span><span></span><span></span></button>
